--- a/templates/wtoz.html
+++ b/templates/wtoz.html
@@ -40,7 +40,7 @@
           <li class="divider"></li>
           <li><a href="{{ url_for('wtou') }}">Win to Uni</a></li>
           <li class="divider"></li>
-          <li><a href="{{ url_for('wtoz) }}">Win to ZawGyi</a></li>
+          <li><a href="{{ url_for('wtoz') }}">Win to ZawGyi</a></li>
           <li class="divider"></li>
           <li><a href="{{ url_for('utow') }}">Uni to Win</a></li>
           <li class="divider"></li>
