--- a/templates/index.html
+++ b/templates/index.html
@@ -86,19 +86,7 @@
 
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
-          <p>
-            <a href="#!">MDBootstrap</a>
-          </p>
-          <p>
-            <a href="#!">MDWordPress</a>
-          </p>
-          <p>
-            <a href="#!">BrandFlow</a>
-          </p>
-          <p>
-            <a href="#!">Bootstrap Angular</a>
-          </p>
+          <a href="{{ url_for('about') }}"><h6 class="text-uppercase mb-4 font-weight-bold">About</h6></a>
         </div>
         <!-- Grid column -->
 
@@ -106,19 +94,7 @@
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
-          <p>
-            <a href="#!">Your Account</a>
-          </p>
-          <p>
-            <a href="#!">Become an Affiliate</a>
-          </p>
-          <p>
-            <a href="#!">Shipping Rates</a>
-          </p>
-          <p>
-            <a href="#!">Help</a>
-          </p>
+          <a href="{{ url_for('work') }}"><h6 class="text-uppercase mb-4 font-weight-bold">How it work?</h6></a>
         </div>
 
         <!-- Grid column -->
