--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
 
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <a href="{{ url_for('about') }}"><h6 class="text-uppercase mb-4 font-weight-bold">About</h6></a>
+          <a href="about.html"><h6 class="text-uppercase mb-4 font-weight-bold">About</h6></a>
         </div>
         <!-- Grid column -->
 
@@ -94,7 +94,7 @@
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-          <a href="{{ url_for('work') }}"><h6 class="text-uppercase mb-4 font-weight-bold">How it work?</h6></a>
+          <a href="work.html"><h6 class="text-uppercase mb-4 font-weight-bold">How it work?</h6></a>
         </div>
 
         <!-- Grid column -->
